[gd_scene load_steps=3 format=3 uid="uid://8xlmihcy1byk"]

[ext_resource type="Script" path="res://UI/MonsterUI.gd" id="1_1k4kd"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_qrvsg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_qrvsg")

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="MonsterUI" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1k4kd")

[node name="HealthBar" type="ProgressBar" parent="Canvas/MonsterUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 218.0
offset_bottom = 51.0

[node name="HeatBar" type="ProgressBar" parent="Canvas/MonsterUI"]
layout_mode = 0
offset_left = 19.0
offset_top = 64.0
offset_right = 217.0
offset_bottom = 96.0
step = 1.0
show_percentage = false

[node name="Value" type="RichTextLabel" parent="Canvas/MonsterUI/HeatBar"]
layout_mode = 0
offset_right = 198.0
offset_bottom = 31.0
bbcode_enabled = true
text = "0"
autowrap_mode = 0
